updated at: 2020-02-24 17:57, [VRM&amp;Unitypackage]Yorimichi - 塩トローチBOOTH - BOOTH

--- a/VRChat/53/960853.html
+++ b/VRChat/53/960853.html
@@ -6,7 +6,7 @@
       [VRM&amp;Unitypackage]Yorimichi - 塩トローチBOOTH - BOOTH
     </title>
     <meta name="description" content=
-    "※ver1.1.0より頭部バランスの変更を行っております。見本画像の更新が行われるまで、見本URLから最新版のモデル確認を行った上でのご購入をお勧めいたします。 バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ ニコニ立体（Tポーズ）： http://nico.ms/td39160 VRoidHub（モーション有）：">
+    "※ver1.1.0より頭部バランスの変更を行っております。見本画像の更新が行われるまで、見本URLから最新版のモデル確認を行った上でのご購入をお勧めいたします。 バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ VRoidHub：">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/960853">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "[VRM&amp;Unitypackage]Yorimichi - 塩トローチBOOTH - BOOTH">
     <meta name="twitter:description" content=
-    "※ver1.1.0より頭部バランスの変更を行っております。見本画像の更新が行われるまで、見本URLから最新版のモデル確認を行った上でのご購入をお勧めいたします。 バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ ニコニ立体（Tポーズ）： http://nico.ms/td39160 VRoidHub（モーション有）：">
+    "※ver1.1.0より頭部バランスの変更を行っております。見本画像の更新が行われるまで、見本URLから最新版のモデル確認を行った上でのご購入をお勧めいたします。 バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ VRoidHub：">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/960853/a26661f6-7ec9-4674-8c5c-fb812d780ba3_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "[VRM&amp;Unitypackage]Yorimichi - 塩トローチBOOTH - BOOTH">
     <meta property="og:description" content=
-    "※ver1.1.0より頭部バランスの変更を行っております。見本画像の更新が行われるまで、見本URLから最新版のモデル確認を行った上でのご購入をお勧めいたします。 バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ ニコニ立体（Tポーズ）： http://nico.ms/td39160 VRoidHub（モーション有）：">
+    "※ver1.1.0より頭部バランスの変更を行っております。見本画像の更新が行われるまで、見本URLから最新版のモデル確認を行った上でのご購入をお勧めいたします。 バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ VRoidHub：">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/960853/a26661f6-7ec9-4674-8c5c-fb812d780ba3_base_resized.jpg">
     <meta property="og:url" content=
@@ -269,16 +269,6 @@
                             "[VRM&amp;Unitypackage]Yorimichi"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/960853/5c27ede4-8b7d-49de-880a-ac732da9aeae_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "[VRM&amp;Unitypackage]Yorimichi"
-                            class="market-item-detail-item-image"
-                            data-lazy=
                             "https://booth.pximg.net/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/960853/0eab78d9-e916-4334-aa82-9d940aa9ba7d_base_resized.jpg">
                           </div>
                         </div>
@@ -301,10 +291,6 @@
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/960853/5c27ede4-8b7d-49de-880a-ac732da9aeae_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/960853/0eab78d9-e916-4334-aa82-9d940aa9ba7d_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
@@ -319,9 +305,7 @@
                             ※ver1.1.0より頭部バランスの変更を行っております。見本画像の更新が行われるまで、見本URLから最新版のモデル確認を行った上でのご購入をお勧めいたします。
                             バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！
                             Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。
-                            許可範囲内での営利利用も可能です。 ★見本はこちら★ ニコニ立体（Tポーズ）：
-                            http://nico.ms/td39160
-                            VRoidHub（モーション有）：
+                            許可範囲内での営利利用も可能です。 ★見本はこちら★ VRoidHub：
                             https://hub.vroid.com/characters/5819581094866403378/models/8268174952429317624
                             ★リカラーテクスチャパックはこちら★
                             https://messier.booth.pm/items/960969
