updated at: 2020-02-24 19:08, [VRM&amp;Unitypackage]Hyoko - 塩トローチBOOTH - BOOTH

--- a/VRChat/81/913181.html
+++ b/VRChat/81/913181.html
@@ -6,7 +6,7 @@
       [VRM&amp;Unitypackage]Hyoko - 塩トローチBOOTH - BOOTH
     </title>
     <meta name="description" content=
-    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ ニコニ立体（Tポーズ）： http://3d.nicovideo.jp/works/td45309 VRoidHub（モーション有）： https://hub.vroid.com/characters/3443008764100441465/models/8889569413370932071">
+    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ VRoidHub： https://hub.vroid.com/characters/3443008764100441465/models/8889569413370932071 ★リカラーテクスチャパックはこちら★ https://messier.booth.pm/items/875037">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/913181">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "[VRM&amp;Unitypackage]Hyoko - 塩トローチBOOTH - BOOTH">
     <meta name="twitter:description" content=
-    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ ニコニ立体（Tポーズ）： http://3d.nicovideo.jp/works/td45309 VRoidHub（モーション有）： https://hub.vroid.com/characters/3443008764100441465/models/8889569413370932071">
+    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ VRoidHub： https://hub.vroid.com/characters/3443008764100441465/models/8889569413370932071 ★リカラーテクスチャパックはこちら★ https://messier.booth.pm/items/875037">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/913181/e8959866-8031-43b3-9a6a-8433156ff57d_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "[VRM&amp;Unitypackage]Hyoko - 塩トローチBOOTH - BOOTH">
     <meta property="og:description" content=
-    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ ニコニ立体（Tポーズ）： http://3d.nicovideo.jp/works/td45309 VRoidHub（モーション有）： https://hub.vroid.com/characters/3443008764100441465/models/8889569413370932071">
+    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。 ★見本はこちら★ VRoidHub： https://hub.vroid.com/characters/3443008764100441465/models/8889569413370932071 ★リカラーテクスチャパックはこちら★ https://messier.booth.pm/items/875037">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/913181/e8959866-8031-43b3-9a6a-8433156ff57d_base_resized.jpg">
     <meta property="og:url" content=
@@ -267,15 +267,6 @@
                             <img alt="[VRM&amp;Unitypackage]Hyoko"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/913181/d3051765-8601-4784-a6b8-c88dd7980159_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="[VRM&amp;Unitypackage]Hyoko"
-                            class="market-item-detail-item-image"
-                            data-lazy=
                             "https://booth.pximg.net/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/913181/24debfe0-71a2-4a13-a4ad-8b0af22be461_base_resized.jpg">
                           </div>
                         </div>
@@ -288,10 +279,6 @@
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/913181/d3051765-8601-4784-a6b8-c88dd7980159_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/913181/24debfe0-71a2-4a13-a4ad-8b0af22be461_base_resized.jpg">
                         </div></a>
                       </div>
@@ -301,9 +288,7 @@
                           <p class="autolink u-text-wrap">
                             バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！
                             Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。
-                            許可範囲内での営利利用も可能です。 ★見本はこちら★ ニコニ立体（Tポーズ）：
-                            http://3d.nicovideo.jp/works/td45309
-                            VRoidHub（モーション有）：
+                            許可範囲内での営利利用も可能です。 ★見本はこちら★ VRoidHub：
                             https://hub.vroid.com/characters/3443008764100441465/models/8889569413370932071
                             ★リカラーテクスチャパックはこちら★
                             https://messier.booth.pm/items/875037
