--- a/VRChat/60/1316560.html
+++ b/VRChat/60/1316560.html
@@ -81,7 +81,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="o10ufu" data-product-category="127"
         data-product-id="1316560" data-product-list="market_show"
-        data-product-price="500" data-tracking="detail_item">
+        data-product-price="300" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -174,7 +174,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 500
+                                    ¥ 300
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -187,7 +187,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1316560"
-                                      data-product-price="500"
+                                      data-product-price="300"
                                       data-product-brand="o10ufu"
                                       data-product-category="127"
                                       data-product-variant=
@@ -203,7 +203,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1316560"
-                                        data-product-price="500"
+                                        data-product-price="300"
                                         data-product-brand="o10ufu"
                                         data-product-category="127"
                                         data-product-variant=
@@ -237,7 +237,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 1,146
+                                    ¥ 463
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -250,7 +250,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1316560"
-                                      data-product-price="1146"
+                                      data-product-price="463"
                                       data-product-brand="o10ufu"
                                       data-product-category="127"
                                       data-product-variant=
@@ -266,7 +266,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1316560"
-                                        data-product-price="1146"
+                                        data-product-price="463"
                                         data-product-brand="o10ufu"
                                         data-product-category="127"
                                         data-product-variant=
@@ -430,6 +430,7 @@
                             モデルの一部を修正しました。テクスチャを4枚追加しました。暗闇でも宝石部分だけ光るようになりました。（emun_bracelet_rp2b_v101.zip)
                             　価格を￥300→￥500へ変更しました。 2019.08.26
                             スペキュラマップを修正しました。これによりさらに全体のキラキラ感がupしました。（emun_bracelet_rp2b_v101a.zip）
+                            2020.02.23　価格を\500-&gt;\300へ変更しました。
                             ◆今後のアップデートについて
                             　技術力向上によりハイポリからローポリ化するかもしれません。（たぶん）
                             【個別規定】- ◆利用規約◆
