updated at: 2020-02-24 20:05, Future device &quot;Cuffs&quot; - Production ℵː9 - BOOTH

--- a/VRChat/63/1306963.html
+++ b/VRChat/63/1306963.html
@@ -6,7 +6,7 @@
       Future device "Cuffs" - Production ℵː9 - BOOTH
     </title>
     <meta name="description" content=
-    "Cuffsは腕章の代替品です。 液晶画面風シェーダーでテクスチャをスクロールさせることができます。 手首をオシャレにアピールしたい方に最適！ 【内容】 ・カフfbx ・C's LCD Shader ・サンプルテクスチャ、Prefabなど 手首でご使用の場合は、ボーンのHierarchyでLowerArmに入れてお使いください。">
+    "Cuffsは腕章の代替品のカフスです。 液晶画面風シェーダーでテクスチャをスクロールさせることができます。 手首をオシャレにアピールしたい方に最適！ 【内容】 ・カフfbx ・C's LCD Shader ・サンプルテクスチャ、Prefabなど 手首でご使用の場合は、ボーンのHierarchyでLowerArmに入れてお使いください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1306963">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "Future device &quot;Cuffs&quot; - Production ℵː9 - BOOTH">
     <meta name="twitter:description" content=
-    "Cuffsは腕章の代替品です。 液晶画面風シェーダーでテクスチャをスクロールさせることができます。 手首をオシャレにアピールしたい方に最適！ 【内容】 ・カフfbx ・C's LCD Shader ・サンプルテクスチャ、Prefabなど 手首でご使用の場合は、ボーンのHierarchyでLowerArmに入れてお使いください。">
+    "Cuffsは腕章の代替品のカフスです。 液晶画面風シェーダーでテクスチャをスクロールさせることができます。 手首をオシャレにアピールしたい方に最適！ 【内容】 ・カフfbx ・C's LCD Shader ・サンプルテクスチャ、Prefabなど 手首でご使用の場合は、ボーンのHierarchyでLowerArmに入れてお使いください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/02658766-23c0-4747-bfaf-8658ada54514/i/1306963/182737f7-71cf-4ac1-b216-1eb08f634df4_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "Future device &quot;Cuffs&quot; - Production ℵː9 - BOOTH">
     <meta property="og:description" content=
-    "Cuffsは腕章の代替品です。 液晶画面風シェーダーでテクスチャをスクロールさせることができます。 手首をオシャレにアピールしたい方に最適！ 【内容】 ・カフfbx ・C's LCD Shader ・サンプルテクスチャ、Prefabなど 手首でご使用の場合は、ボーンのHierarchyでLowerArmに入れてお使いください。">
+    "Cuffsは腕章の代替品のカフスです。 液晶画面風シェーダーでテクスチャをスクロールさせることができます。 手首をオシャレにアピールしたい方に最適！ 【内容】 ・カフfbx ・C's LCD Shader ・サンプルテクスチャ、Prefabなど 手首でご使用の場合は、ボーンのHierarchyでLowerArmに入れてお使いください。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/02658766-23c0-4747-bfaf-8658ada54514/i/1306963/182737f7-71cf-4ac1-b216-1eb08f634df4_base_resized.jpg">
     <meta property="og:url" content=
@@ -287,7 +287,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            Cuffsは腕章の代替品です。
+                            Cuffsは腕章の代替品のカフスです。
                             液晶画面風シェーダーでテクスチャをスクロールさせることができます。
                             手首をオシャレにアピールしたい方に最適！ 【内容】 ・カフfbx ・C's
                             LCD Shader ・サンプルテクスチャ、Prefabなど
