updated at: 2020-02-24 23:09, 【オリジナル3Dモデル】ロク - こたつ本舗 - BOOTH

--- a/VRChat/48/1228148.html
+++ b/VRChat/48/1228148.html
@@ -178,8 +178,8 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title="Roku_Ver2_1.zip" href=
-                                    "https://booth.pm/downloadables/732147">
+                                    title="Roku_Ver2_2.zip" href=
+                                    "https://booth.pm/downloadables/916865">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -188,13 +188,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        Roku_Ver2_1
+                                        Roku_Ver2_2
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(33.6 MB)
+                                        &nbsp;(33 MB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -359,8 +359,9 @@
                             ・暴力行為、わいせつ表現、残虐な表現などの公序良俗に反するものへの使用・改変
                             ・政治的、宗教的なものへの過度な表現、活動への使用
                             ・収録物、及びその改造物の販売・再配布 [更新履歴] 2019/2/14
-                            Ver1.0公開 2019/6/15 Ver2.0 2019/9/25
-                            ver2.1
+                            Ver1.0 公開 2019/6/15 Ver2.0 後頭部の修正
+                            2019/9/25 Ver2.1 素体の修正、テクスチャの加筆/変更
+                            2020/2/24 Ver2.2 シェーダー・ライティング結果の調整
                           </p>
                         </div>
                       </section>
