updated at: 2020-02-24 23:12, 3Dモデル「ドラゴノイド」 - サークル名思いつかなかった - BOOTH

--- a/VRChat/76/1227276.html
+++ b/VRChat/76/1227276.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      3Dモデル「ドラゴノイド」 - ショップ名思いつかなかった - BOOTH
+      3Dモデル「ドラゴノイド」 - サークル名思いつかなかった - BOOTH
     </title>
     <meta name="description" content="竜の子">
     <meta name="keywords" content=
@@ -12,13 +12,13 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "3Dモデル「ドラゴノイド」 - ショップ名思いつかなかった - BOOTH">
+    "3Dモデル「ドラゴノイド」 - サークル名思いつかなかった - BOOTH">
     <meta name="twitter:description" content="竜の子">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e646211e-4d2a-4fbc-98f6-a3b5f82fd477/i/1227276/1f915500-4bfb-4b19-85b9-949f3983bfa1_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "3Dモデル「ドラゴノイド」 - ショップ名思いつかなかった - BOOTH">
+    "3Dモデル「ドラゴノイド」 - サークル名思いつかなかった - BOOTH">
     <meta property="og:description" content="竜の子">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/e646211e-4d2a-4fbc-98f6-a3b5f82fd477/i/1227276/1f915500-4bfb-4b19-85b9-949f3983bfa1_base_resized.jpg">
@@ -131,11 +131,11 @@
                           href="https://shikinomiya.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ショップ名思いつかなかった" class=
+                            <img alt="サークル名思いつかなかった" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3310159/icon_image/f9c5a3fb-bb39-4de2-9f0d-5e4caa6b673e_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ショップ名思いつかなかった
+                              サークル名思いつかなかった
                             </div>
                           </div></a>
                         </div>
@@ -234,7 +234,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1227276"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="3Dモデル「ドラゴノイド」 | ショップ名思いつかなかった"
+                          data-text="3Dモデル「ドラゴノイド」 | サークル名思いつかなかった"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
