updated at: 2020-02-24 23:41, 【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 - - BOOTH

--- a/VRChat/03/1215303.html
+++ b/VRChat/03/1215303.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 - - BOOTH
+      【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 - - BOOTH
     </title>
     <meta name="description" content=
     "常なるこの世を維持する【常世界機構】が管理保有する 汎用人型自立稼働システムU10のmk2です。 対甲種想定の中・遠距離兵装となります。 VRoidHubにてVRM版での動作を確認することができます。 https://hub.vroid.com/characters/8090011406692949310/models/4199846337041807340 ———————————————————— U10と書いて「ユト」と読みます。 量産型のアンドロイドです。 Oculus Quest対応版／VRM版同梱。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 - - BOOTH">
+    "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 - - BOOTH">
     <meta name="twitter:description" content=
     "常なるこの世を維持する【常世界機構】が管理保有する 汎用人型自立稼働システムU10のmk2です。 対甲種想定の中・遠距離兵装となります。 VRoidHubにてVRM版での動作を確認することができます。 https://hub.vroid.com/characters/8090011406692949310/models/4199846337041807340 ———————————————————— U10と書いて「ユト」と読みます。 量産型のアンドロイドです。 Oculus Quest対応版／VRM版同梱。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/fc83fd04-fd9c-4e83-99b3-657f2ffad077_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 - - BOOTH">
+    "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 - - BOOTH">
     <meta property="og:description" content=
     "常なるこの世を維持する【常世界機構】が管理保有する 汎用人型自立稼働システムU10のmk2です。 対甲種想定の中・遠距離兵装となります。 VRoidHubにてVRM版での動作を確認することができます。 https://hub.vroid.com/characters/8090011406692949310/models/4199846337041807340 ———————————————————— U10と書いて「ユト」と読みます。 量産型のアンドロイドです。 Oculus Quest対応版／VRM版同梱。">
     <meta property="og:image" content=
@@ -144,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          ※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】
+                          【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -175,7 +175,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      ※割引中※最新版【PC版ver.3.2】【Quest版ver.3.0】U10mk2
+                                      最新版【PC版ver.3.2】【Quest版ver.3.0】U10mk2
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -184,7 +184,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 3,500
+                                    ¥ 5,000
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -197,7 +197,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1215303"
-                                      data-product-price="3500"
+                                      data-product-price="5000"
                                       data-product-brand=
                                       "kindergarten21"
                                       data-product-category="127"
@@ -214,7 +214,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1215303"
-                                        data-product-price="3500"
+                                        data-product-price="5000"
                                         data-product-brand=
                                         "kindergarten21"
                                         data-product-category="127"
@@ -305,7 +305,7 @@
                           "https://booth.pm/ja/items/1215303"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 | KinderGarten21／常世界機構"
+                          "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】 | KinderGarten21／常世界機構"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -325,7 +325,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
+                            "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/fc83fd04-fd9c-4e83-99b3-657f2ffad077_base_resized.jpg">
@@ -335,7 +335,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
+                            "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/688b83e6-d5f2-4fef-b564-70772741a968_base_resized.jpg">
@@ -345,7 +345,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
+                            "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/1071658f-d772-45d3-bf0b-297c08346c5a_base_resized.jpg">
@@ -355,7 +355,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
+                            "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/8795cc9b-df1a-47ae-b49b-013dfbb28b9c_base_resized.jpg">
@@ -365,7 +365,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
+                            "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/a55f5d6c-8f53-4e6a-b815-cd57875deb6b_base_resized.jpg">
@@ -375,7 +375,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "※割引中※【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
+                            "【PC版ver.3.2＆Quest版ver.3.0】U10mk2【VRChat／VRM想定】"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1215303/1c6e3481-e1c0-4755-8be3-def2eb7d3b0a_base_resized.jpg">
