updated at: 2020-02-25 01:05, [VRM&amp;Unitypackage]Kozono - 塩トローチBOOTH - BOOTH

--- a/VRChat/72/1155172.html
+++ b/VRChat/72/1155172.html
@@ -6,7 +6,7 @@
       [VRM&amp;Unitypackage]Kozono - 塩トローチBOOTH - BOOTH
     </title>
     <meta name="description" content=
-    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。">
+    "バーチャルキャストや各種ゲームで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ 改変用のpsd・blendファイルも添付されており、オリジナルカスタムを加えたい方にもオススメです。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1155172">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "[VRM&amp;Unitypackage]Kozono - 塩トローチBOOTH - BOOTH">
     <meta name="twitter:description" content=
-    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。">
+    "バーチャルキャストや各種ゲームで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ 改変用のpsd・blendファイルも添付されており、オリジナルカスタムを加えたい方にもオススメです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/1155172/6ce6d0ff-9eca-454f-8fc3-9edaebed576c_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "[VRM&amp;Unitypackage]Kozono - 塩トローチBOOTH - BOOTH">
     <meta property="og:description" content=
-    "バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。 許可範囲内での営利利用も可能です。">
+    "バーチャルキャストや各種ゲームで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！ 改変用のpsd・blendファイルも添付されており、オリジナルカスタムを加えたい方にもオススメです。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/1155172/6ce6d0ff-9eca-454f-8fc3-9edaebed576c_base_resized.jpg">
     <meta property="og:url" content=
@@ -378,9 +378,8 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            バーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！
-                            Unitypackage内のFBXには素体データも含まれる為、洋服のカスタムを行いたい方にも最適です。
-                            許可範囲内での営利利用も可能です。
+                            バーチャルキャストや各種ゲームで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！
+                            改変用のpsd・blendファイルも添付されており、オリジナルカスタムを加えたい方にもオススメです。
                           </p>
                         </div>
                       </section>
@@ -530,6 +529,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 モクリバザールB
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/Quest%E5%AF%BE%E5%BF%9C">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                Quest対応
                               </div>
                             </div></a>
                           </div>
