updated at: 2020-02-25 03:51, VRChat用自撮りカメラ(デスクトップモード向け) - おにさわ看板店 - BOOTH

--- a/VRChat/87/1062687.html
+++ b/VRChat/87/1062687.html
@@ -389,5 +389,16 @@
         </div>
       </main>
     </div>
+    <div class="booth-overlay"></div>
+    <div class="booth-modal">
+      <div class="booth-modal-viewer">
+        <div class="booth-modal-viewer-inner">
+          <div class="booth-modal-content-wrapper">
+            <div class="booth-modal-head u-text-right"></div>
+            <div class="booth-modal-content"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
