--- a/VRChat/63/1061463.html
+++ b/VRChat/63/1061463.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRchat想定】命を刈り取れそうな鎌 ▽2099ポリ - みうきさんのショップ - BOOTH
+      【VRchat想定】命を刈り取れそうな鎌 ▽2099ポリ - みうきのショップ - BOOTH
     </title>
     <meta name="description" content=
     "名の通り命が刈り取れそうな鎌です。 Standardシェーダーを使用している関係でVRchatで使用する場合 暗いワールドで使用するとあまり目立たないことがあります。 許してください。 3Dcoatがほしいのでよろしくお願いします！ 利用規約は二次配布や再配布以外基本可とします。 何かありましたら@hideshine0119まで連絡ください！">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRchat想定】命を刈り取れそうな鎌 ▽2099ポリ - みうきさんのショップ - BOOTH">
+    "【VRchat想定】命を刈り取れそうな鎌 ▽2099ポリ - みうきのショップ - BOOTH">
     <meta name="twitter:description" content=
     "名の通り命が刈り取れそうな鎌です。 Standardシェーダーを使用している関係でVRchatで使用する場合 暗いワールドで使用するとあまり目立たないことがあります。 許してください。 3Dcoatがほしいのでよろしくお願いします！ 利用規約は二次配布や再配布以外基本可とします。 何かありましたら@hideshine0119まで連絡ください！">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e136fa4e-7f1d-49be-89ef-2cf6b27f478b/i/1061463/4e37e73a-e304-4238-aae3-2fc8028ecbe7_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRchat想定】命を刈り取れそうな鎌 ▽2099ポリ - みうきさんのショップ - BOOTH">
+    "【VRchat想定】命を刈り取れそうな鎌 ▽2099ポリ - みうきのショップ - BOOTH">
     <meta property="og:description" content=
     "名の通り命が刈り取れそうな鎌です。 Standardシェーダーを使用している関係でVRchatで使用する場合 暗いワールドで使用するとあまり目立たないことがあります。 許してください。 3Dcoatがほしいのでよろしくお願いします！ 利用規約は二次配布や再配布以外基本可とします。 何かありましたら@hideshine0119まで連絡ください！">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://miukisas.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="みうきさんのショップ" class=
+                            <img alt="みうきのショップ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5553052/icon_image/327d5739-3af0-4c06-8e94-c58f15422bc1_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              みうきさんのショップ
+                              みうきのショップ
                             </div>
                           </div></a>
                         </div>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/1061463"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRchat想定】命を刈り取れそうな鎌 ▽2099ポリ | みうきさんのショップ"
+                          "【VRchat想定】命を刈り取れそうな鎌 ▽2099ポリ | みうきのショップ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
